[gd_scene load_steps=20 format=3 uid="uid://b377um7dkpmc5"]

[ext_resource type="PackedScene" uid="uid://n1b3fv7mjy2d" path="res://component/hurtbox_component.tscn" id="1_l34ok"]
[ext_resource type="PackedScene" uid="uid://daphxaq0loknd" path="res://component/health_component.tscn" id="1_mdpbk"]
[ext_resource type="Script" uid="uid://bbrof3lhus0tt" path="res://entities/upgrade_option/upgrade_option.gd" id="1_yuvji"]
[ext_resource type="Texture2D" uid="uid://7uoyatvururv" path="res://assets/upgrade/upgrade_option.png" id="3_34j1a"]
[ext_resource type="AudioStream" uid="uid://dbc2su3rekstk" path="res://assets/audio/hit_1.wav" id="3_50v2f"]
[ext_resource type="AudioStream" uid="uid://dgn3fehatbp3d" path="res://assets/audio/hit_2.wav" id="4_wxtqv"]
[ext_resource type="PackedScene" uid="uid://cskhnb5sjrumg" path="res://component/hit_flash_sprite_component.tscn" id="5_jncuo"]
[ext_resource type="AudioStream" uid="uid://cdcbm0thalah8" path="res://assets/audio/hit_3.wav" id="5_wwg0f"]
[ext_resource type="Shader" uid="uid://dnqnawj2p3fs4" path="res://resources/shader/hit_flash.gdshader" id="5_xoods"]
[ext_resource type="AudioStream" uid="uid://dx2jgjubvrcom" path="res://assets/audio/hit_4.wav" id="6_c0upa"]

[sub_resource type="Animation" id="Animation_jncuo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HitFlashSpriteComponent:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HitFlashSpriteComponent:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -16)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HurtboxComponent/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_27yqu"]
resource_name = "despawn"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HitFlashSpriteComponent:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.9, 0.9), Vector2(1.5, 1.5), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HurtboxComponent/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="Animation_xoods"]
resource_name = "idle"
length = 2.0
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HitFlashSpriteComponent:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HitFlashSpriteComponent:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -16), Vector2(0, -20)]
}

[sub_resource type="Animation" id="Animation_34j1a"]
resource_name = "spawn"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HitFlashSpriteComponent:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1.5, 1.5), Vector2(0.9, 0.9), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HurtboxComponent/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xoods"]
_data = {
&"RESET": SubResource("Animation_jncuo"),
&"despawn": SubResource("Animation_27yqu"),
&"idle": SubResource("Animation_xoods"),
&"spawn": SubResource("Animation_34j1a")
}

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_50v2f"]
random_pitch = 1.1
random_volume_offset_db = 2.0
streams_count = 4
stream_0/stream = ExtResource("3_50v2f")
stream_1/stream = ExtResource("4_wxtqv")
stream_2/stream = ExtResource("5_wwg0f")
stream_3/stream = ExtResource("6_c0upa")

[sub_resource type="CircleShape2D" id="CircleShape2D_mdpbk"]
radius = 8.0

[sub_resource type="CircleShape2D" id="CircleShape2D_xoods"]
radius = 32.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_27yqu"]
resource_local_to_scene = true
shader = ExtResource("5_xoods")
shader_parameter/percent = 0.0

[node name="UpgradeOption" type="Node2D" groups=["upgrade_option"]]
script = ExtResource("1_yuvji")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_xoods")
}
next/spawn = &"idle"

[node name="HealthComponent" parent="." instance=ExtResource("1_mdpbk")]
max_health = 10

[node name="HitStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_50v2f")
volume_db = -2.0
max_polyphony = 3
bus = &"sfx"

[node name="HurtboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("1_l34ok")]
position = Vector2(0, -16)
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
shape = SubResource("CircleShape2D_mdpbk")
disabled = true

[node name="PlayerDetectionArea" type="Area2D" parent="."]
position = Vector2(0, -16)
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectionArea"]
shape = SubResource("CircleShape2D_xoods")

[node name="HitFlashSpriteComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("5_jncuo")]
material = SubResource("ShaderMaterial_27yqu")
position = Vector2(0, -16)
texture = ExtResource("3_34j1a")
health_component = NodePath("../HealthComponent")

[node name="InfoContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(192, 0)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -96.0
offset_top = -80.0
offset_right = 96.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
theme_override_constants/separation = 0

[node name="TitleLabel" type="Label" parent="InfoContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.831373, 0.172549, 0.309804, 1)
theme_override_constants/outline_size = 4
text = "Example Title"
horizontal_alignment = 1

[node name="DescriptionLabel" type="Label" parent="InfoContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(192, 0)
layout_mode = 2
theme_override_constants/outline_size = 4
text = "Example Description"
horizontal_alignment = 1
autowrap_mode = 2
